linked_list/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:05:41 **** Rebuild of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Linked_list.o" "..\\src\\Linked_list.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:08:06 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Linked_list.o" "..\\src\\Linked_list.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:12:51 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Linked_list.o" "..\\src\\Linked_list.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
13:14:09 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Linked_list.o" "..\\src\\Linked_list.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:15:18 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:15:49 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:16:39 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:31:04 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Linked_list.o" "..\\src\\Linked_list.c" 
..\src\Linked_list.c: In function 'LL_NodeFromEnd':
..\src\Linked_list.c:276:20: error: incompatible types when initializing type 'LL_t *' {aka 'struct LL_st *'} using type 'LL_t' {aka 'struct LL_st'}
  276 |         LL_t *temp=*Head;
      |                    ^
..\src\Linked_list.c:277:38: error: incompatible type for argument 1 of 'LL_data_number'
  277 |         uint32 Length=LL_data_number(*Head);
      |                                      ^~~~~
      |                                      |
      |                                      LL_t {aka struct LL_st}
In file included from ..\src\Linked_list.c:10:
..\src\linked_list.h:33:29: note: expected 'LL_t *' {aka 'struct LL_st *'} but argument is of type 'LL_t' {aka 'struct LL_st'}
   33 | uint32 LL_data_number(LL_t *Head);
      |                       ~~~~~~^~~~
13:31:19 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Linked_list.o" "..\\src\\Linked_list.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:31:51 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
13:32:11 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
14:39:43 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
..\src\single_LL.c: In function 'main':
..\src\single_LL.c:43:17: warning: passing argument 1 of 'LL_Sort' from incompatible pointer type [-Wincompatible-pointer-types]
   43 |         LL_Sort(LL_Head1);
      |                 ^~~~~~~~
      |                 |
      |                 LL_t * {aka struct LL_st *}
In file included from ..\src\single_LL.c:12:
..\src\linked_list.h:32:21: note: expected 'LL_t **' {aka 'struct LL_st **'} but argument is of type 'LL_t *' {aka 'struct LL_st *'}
   32 | void LL_Sort(LL_t **Head);//using insertion sort
      |              ~~~~~~~^~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Linked_list.o" "..\\src\\Linked_list.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
14:39:51 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
14:40:27 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
14:41:08 **** Incremental Build of configuration Debug for project single_LL ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\single_LL.o" "..\\src\\single_LL.c" 
gcc -o single_LL.exe "src\\Linked_list.o" "src\\single_LL.o" 
Info: Nothing to build for single_LL
